@@ -7,7 +7,6 @@
 		<PROPERTY NAME="commentStart" VALUE="/*" />
 		<PROPERTY NAME="commentEnd" VALUE="*/" />
 		<PROPERTY NAME="lineComment" VALUE="--" />
-		<PROPERTY NAME="noWordSep" VALUE="_" />
 	</PROPS>
 	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
 		<WHITESPACE> </WHITESPACE>
@@ -25,6 +24,7 @@
 			<END>]</END>
 		</SPAN>
 		<EOL_SPAN TYPE="COMMENT1">--</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT1">REM</EOL_SPAN>
 		<SEQ TYPE="OPERATOR">+</SEQ>
 		<SEQ TYPE="OPERATOR">-</SEQ>
 		<SEQ TYPE="OPERATOR">/</SEQ>
@@ -302,6 +302,8 @@
 			<KEYWORD2>CONVERT</KEYWORD2>
 			<KEYWORD2>COS</KEYWORD2>
 			<KEYWORD2>COSH</KEYWORD2>
+            <KEYWORD2>DECODE</KEYWORD2>
+            <KEYWORD2>DEFINE</KEYWORD2>
 			<KEYWORD2>FLOOR</KEYWORD2>
 			<KEYWORD2>HEXTORAW</KEYWORD2>
 			<KEYWORD2>INITCAP</KEYWORD2>
@@ -323,6 +325,7 @@
 			<KEYWORD2>NSL_INITCAP</KEYWORD2>
 			<KEYWORD2>NLS_LOWER</KEYWORD2>
 			<KEYWORD2>NLS_UPPER</KEYWORD2>
+			<KEYWORD2>NVL</KEYWORD2>
 			<KEYWORD2>POWER</KEYWORD2>
 			<KEYWORD2>RAWTOHEX</KEYWORD2>
 			<KEYWORD2>REPLACE</KEYWORD2>
